# MemeSwap

./: .gitignore  PROJECT_PLAN.md  README.md
backend/: download_yolo_model.py  main.py  pyproject.toml  requirements.txt  show_config.py
backend/app/api/: api.py
backend/app/api/endpoints/: face_swap.py  gif_search.py
backend/app/core/: config.py
backend/app/ml/: config.py  face_detection.py  face_swap.py
backend/app/utils/: file_utils.py
backend/uploads/: .gitkeep
frontend/src/app/: page.js
frontend/src/components/: FaceSwap.js  FaceUpload.js  GifSearch.js
